Fix position of elements
Fixed the position of elements and the scrollbar appearing in the corner of the screen.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,9 +2,13 @@ canvas#canvas {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 3;
 }
 
-body {
+#elementsGirl {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-image: url("/assets/images/bubble.webp"),
@@ -12,4 +16,18 @@ body {
   background-repeat: no-repeat;
   background-position: left top, right top;
   background-size: contain;
+  z-index: 2; 
+}
+/* particles.js container */
+#particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  z-index: 3;
+
 }
